--- a/application/views/flat/3-Books/009.xhtml
+++ b/application/views/flat/3-Books/009.xhtml
@@ -4,24 +4,24 @@
 <li page="">ಪರಿವಿಡಿ</li>
 <li page="">ಪಾವೆಂ ವಂಶವೃಕ್ಷದ ಪರವಾಗಿ - ಶ್ರೀನಿವಾಸ ವಿ. ಪಾಡಿಗಾರ </li>
 <li page="">ಅರ್ಪಣೆ: ಶ್ರೀಕೃಷ್ಣನಿಗೆ - ಪಾವೆಂ</li>
-<li page="">1. ನನ್ನ ತಂದೆ ಪಾವೆಂ - ರಾಧಾಕೃಷ್ಣ ಆಚಾರ್ಯ</li>
-<li page="">2. ನನ್ನ ಸ್ಮೃತಿ ಪಟಲದಲ್ಲಿ ತಂದೆ ಪಾವೆಂ - ರಮಾನಂದ ಪಾಡಿಗಾರ</li>
-<li page="">3, ಮಾವ ಪಾವೆಂ - ವಿಜಯಲಕ್ಷ್ಮಿ ರಮಾನಂದ ಪಾಡಿಗಾರ</li>
-<li page="">4. ಮಗಳ ದೃಷ್ಟಿಯಲ್ಲಿ ತಂದೆ - ಅನಸೂಯ ಜಿ. ಮಾರ್ಕೋಡ</li>
-<li page="">5. ನನ್ನ ಬಾಲ್ಯದ ಸವಿನೆನಪುಗಳು - ಅಹಲ್ಯಾ ಕೃಷ್ಣಮೂರ್ತಿ ರಾವ್</li>
-<li page="">6. ವ್ಯಕ್ತಿಯಲ್ಲ, ಶಕ್ತಿ ! - ಕೆ. ಕೃಷ್ಣಮೂರ್ತಿ ರಾವ್</li>
-<li page="">7. ತಂದೆಯವರು ಮತ್ತು ನಾನು - ಶ್ರೀನಿವಾಸ ವಿ. ಪಾಡಿಗಾರ</li>
-<li page="">8. ಅಜ್ಜನ ಮನೆಗೆ ಹೋದಾಗ - ಉಪೇಂದ್ರ ಎಂ. ಪಾಡಿಗಾರ</li>
-<li page="">9. ಪಾವೆಂ - ಅತ್ತೆ, ಮಾವನವರಿಂದ ಕೇಳಿದಂತೆ - ಭವಾನಿ ಶ್ಯಾಮ್ ಪಾಡಿಗಾರ</li>
-<li page="">10. ಪಾವೆಂ ಬರಹವೇ ಬದುಕು - ಜ್ಯೋತಿ ವೆಂಕಟಗಿರಿ ಉಪಾಧ್ಯ </li>
-<li page="">11. ಹೀಗೂ ಇದ್ದರು ನಮ್ಮಜ್ಜ - ಛಾಯ ಕೆ. ಉಪಾಧ್ಯ </li>
-<li page="">12. ಪಾವೆಂ ನುಡಿ ಸ್ಮರಣೆ - ಚಂದ್ರಕಾಂತ ವಿ. ಆಚಾರ್ಯ</li>
-<li page="">13. ಅಜ್ಜನ ಆರೋಹಣ - ಮಾಯಾ ಕಿರಣ್</li>
-<li page="">14, ಪಾವೆಂ ಅಜ್ಜ ನಾನು ಕಂಡಂತೆ - ಮೀರಾ ಗೋಪಿನಾಥ</li>
-<li page="">15. ಪಾವೆಂ ಅಜ್ಜ ನನ್ನ ಮನದಲ್ಲಿ & .. ನನ್ನ ಜೀವನ ಪಾಠವಾಗಿ - ವೀಣಾ ಅಡಿಗ</li>
-<li page="">16. My Hubli Ajja - Manjunath Padigar</li>
-<li page="">17. ನಾ ಕಂಡ ಅಜ್ಜ - ಭಾರತಿ ರಾಘವೇಂದ್ರ</li>
-<li page="">18. ನನ್ನ ಸ್ಮೃತಿಯಲ್ಲಿ ನನ್ನ ಹುಬ್ಬಿ ಅಜ್ಜ ಪಾವೆಂ - ಸುಬ್ರಹ್ಮಣ್ಯ ಜಿ. ಮಾರ್ಕೋಡ</li>
-<li page="">19. ನಾ ಕಂಡ ನನ್ನಜ್ಜ - ಕುಮಾರ ಮಾರ್ಕೊಡ ಪುರಾಣಿಕ</li>
+<li page="">ನನ್ನ ತಂದೆ ಪಾವೆಂ - ರಾಧಾಕೃಷ್ಣ ಆಚಾರ್ಯ</li>
+<li page="">ನನ್ನ ಸ್ಮೃತಿ ಪಟಲದಲ್ಲಿ ತಂದೆ ಪಾವೆಂ - ರಮಾನಂದ ಪಾಡಿಗಾರ</li>
+<li page="">ಮಾವ ಪಾವೆಂ - ವಿಜಯಲಕ್ಷ್ಮಿ ರಮಾನಂದ ಪಾಡಿಗಾರ</li>
+<li page="">ಮಗಳ ದೃಷ್ಟಿಯಲ್ಲಿ ತಂದೆ - ಅನಸೂಯ ಜಿ. ಮಾರ್ಕೋಡ</li>
+<li page="">ನನ್ನ ಬಾಲ್ಯದ ಸವಿನೆನಪುಗಳು - ಅಹಲ್ಯಾ ಕೃಷ್ಣಮೂರ್ತಿ ರಾವ್</li>
+<li page="">ವ್ಯಕ್ತಿಯಲ್ಲ, ಶಕ್ತಿ ! - ಕೆ. ಕೃಷ್ಣಮೂರ್ತಿ ರಾವ್</li>
+<li page="">ತಂದೆಯವರು ಮತ್ತು ನಾನು - ಶ್ರೀನಿವಾಸ ವಿ. ಪಾಡಿಗಾರ</li>
+<li page="">ಅಜ್ಜನ ಮನೆಗೆ ಹೋದಾಗ - ಉಪೇಂದ್ರ ಎಂ. ಪಾಡಿಗಾರ</li>
+<li page="">ಪಾವೆಂ - ಅತ್ತೆ, ಮಾವನವರಿಂದ ಕೇಳಿದಂತೆ - ಭವಾನಿ ಶ್ಯಾಮ್ ಪಾಡಿಗಾರ</li>
+<li page="">ಪಾವೆಂ ಬರಹವೇ ಬದುಕು - ಜ್ಯೋತಿ ವೆಂಕಟಗಿರಿ ಉಪಾಧ್ಯ </li>
+<li page="">ಹೀಗೂ ಇದ್ದರು ನಮ್ಮಜ್ಜ - ಛಾಯ ಕೆ. ಉಪಾಧ್ಯ </li>
+<li page="">ಪಾವೆಂ ನುಡಿ ಸ್ಮರಣೆ - ಚಂದ್ರಕಾಂತ ವಿ. ಆಚಾರ್ಯ</li>
+<li page="">ಅಜ್ಜನ ಆರೋಹಣ - ಮಾಯಾ ಕಿರಣ್</li>
+<li page="">ಪಾವೆಂ ಅಜ್ಜ ನಾನು ಕಂಡಂತೆ - ಮೀರಾ ಗೋಪಿನಾಥ</li>
+<li page="">ಪಾವೆಂ ಅಜ್ಜ ನನ್ನ ಮನದಲ್ಲಿ & .. ನನ್ನ ಜೀವನ ಪಾಠವಾಗಿ - ವೀಣಾ ಅಡಿಗ</li>
+<li page="">My Hubli Ajja - Manjunath Padigar</li>
+<li page="">ನಾ ಕಂಡ ಅಜ್ಜ - ಭಾರತಿ ರಾಘವೇಂದ್ರ</li>
+<li page="">ನನ್ನ ಸ್ಮೃತಿಯಲ್ಲಿ ನನ್ನ ಹುಬ್ಬಿ ಅಜ್ಜ ಪಾವೆಂ - ಸುಬ್ರಹ್ಮಣ್ಯ ಜಿ. ಮಾರ್ಕೋಡ</li>
+<li page="">ನಾ ಕಂಡ ನನ್ನಜ್ಜ - ಕುಮಾರ ಮಾರ್ಕೊಡ ಪುರಾಣಿಕ</li>
 </ol>
 </div>
