--- a/application/views/flat/3-Books/012.xhtml
+++ b/application/views/flat/3-Books/012.xhtml
@@ -5,87 +5,87 @@
 <li page="">ಪಾ.ವೆಂ. ಅವರ ಪಂಚದಶಿ - ಡಾ. ಶ್ರೀನಿವಾಸ ಹಾವನೂರ</li>
 <li page="">ಸಂಪಾದಕರ ನುಡಿ</li>
 <li page="">ಪ್ರಾರಂಭದ ಕಲವು ಕವಿತೆಗಳು </li>
-<li page="">೧. ಕಾವ್ಯ ಸಾಮ್ರಾಜ್ಯ </li>
-<li page="">೨. ಚಿಕ್ಕಂದಿನ ನೆನಹು </li>
-<li page="">೩. ರಣಭೇರಿ 'ನವನೀರದ' ದಿಂದ ಬರೆದವನ ಮಾತು </li>
-<li page="">೪. ಹೂಬುಟ್ಟಿ </li>
-<li page="">೫. ಹೂವಿನ ಹಂಬಲ </li>
-<li page="">೬.ಉದ್ಗಾರ </li>
-<li page="">೭. ಮುರಲಿಯ ಹಾಡು </li>
-<li page="">೮. ಬೆಳಕೆಲ್ಲಿ</li>
-<li page="">೯. ಕವಿತೆಗೆ</li>
-<li page="">೧೦. ನನ್ನ ಹಾಡು </li>
-<li page="">೧೧. ಇಪ್ಪತ್ತನೆಯ ಹುಟ್ಟಿದ ದಿನದಂದು</li>
-<li page="">೧೨. ಜಸದ ಮರುಳು </li>
-<li page="">೧೩. ಇನಿಯನ ಸ್ವಾಗತ </li>
-<li page="">೧೪. ಸಂಯುಕ್ತ </li>
-<li page="">೧೫. ಕರೆ</li>
-<li page="">೧೬. ಕವಿತೆ- ದಯಿತೆ</li>
-<li page="">೧೭ ಚುಕ್ಕೆಗಳಿಗೆ</li>
-<li page="">೧೮ ವಿಮರ್ಶಕ</li>
-<li page="">೧೯. ಕೊನೆಯ ಹಾಡು </li>
-<li page="">೨೦. ಏನನೆಣಿಸುತಲಿರುವೆ ? </li>
-<li page="">೨೧. ರೊಟ್ಟಿಯ ರಾಗ </li>
-<li page="">೨೨. ಶ್ರೀ ಕೃಷ್ಣನಿಗೆ</li>
-<li page="">೨೩. ನುಸಿಗೆ </li>
-<li page="">೨೪. ನಾ ಕವಿಂ ಮಾನವಂ ಮನ್ಯೇ </li>
-<li page="">೨೫. ಹೊಸ ಕವಿತೆಯನ್ನು ದೂರುವವರಿಗೆ </li>
-<li page="">೨೬. ಆರೆಂಬರೀಜಗವು ದುಗುಡದರಮನೆಯೆಂದು</li>
-<li page="">೨೭. ಗುಲಾಬಿ ಹೂವಿಗೆ </li>
-<li page="">೨೮. ಯುದ್ಧ </li>
-<li page="">೨೯. ನನ್ನ ಗೋರಿಯ ಮೇಲೆ </li>
-<li page="">೩೦. ಇದು ಏಕೆ ಹೀಗಾಯ್ತು </li>
-<li page="">೩೧. ಆಕಾಂಕ್ಷೆಯೊಂದಿಹುದು </li>
-<li page="">೩೨. ನನ್ನ ಕಾವ್ಯ </li>
-<li page="">೩೩. ಮಗುವಿಗೆ</li>
-<li page="">೩೪.ಬಾರೆಂದು ಕರೆದಾಗ </li>
-<li page="">೩೫. ಒಂದು ಕಾಗದ</li>
-<li page="">೩೬. ಬಯಕೆಯ ಬೆನ್ನು ಹತ್ತಿ </li>
-<li page="">೩೭. ಅಮರ ಮಹಾತ್ಮ </li>
-<li page="">೩೮. ಸತ್ಯದರ್ಶನ </li>
-<li page="">೩೯. ಗಾತ್ರ - ಚಿತ್ರ </li>
-<li page="">೪೦. ಉದ್ದೇಶ </li>
-<li page="">೪೧. ಕವಿ- ವಿಜ್ಞಾನಿಗೆ </li>
-<li page="">೪೨. ಸುಗ್ಗಿ ಯ ಹಾಡು </li>
-<li page="">೪೩. ನವನೀರದ</li>
+<li page="">ಕಾವ್ಯ ಸಾಮ್ರಾಜ್ಯ </li>
+<li page="">ಚಿಕ್ಕಂದಿನ ನೆನಹು </li>
+<li page="">ರಣಭೇರಿ 'ನವನೀರದ' ದಿಂದ ಬರೆದವನ ಮಾತು </li>
+<li page="">ಹೂಬುಟ್ಟಿ </li>
+<li page="">ಹೂವಿನ ಹಂಬಲ </li>
+<li page="">ಉದ್ಗಾರ </li>
+<li page="">ಮುರಲಿಯ ಹಾಡು </li>
+<li page="">ಬೆಳಕೆಲ್ಲಿ</li>
+<li page="">ಕವಿತೆಗೆ</li>
+<li page="">ನನ್ನ ಹಾಡು </li>
+<li page="">ಇಪ್ಪತ್ತನೆಯ ಹುಟ್ಟಿದ ದಿನದಂದು</li>
+<li page="">ಜಸದ ಮರುಳು </li>
+<li page="">ಇನಿಯನ ಸ್ವಾಗತ </li>
+<li page="">ಸಂಯುಕ್ತ </li>
+<li page="">ಕರೆ</li>
+<li page="">ಕವಿತೆ- ದಯಿತೆ</li>
+<li page="">ಚುಕ್ಕೆಗಳಿಗೆ</li>
+<li page="">ವಿಮರ್ಶಕ</li>
+<li page="">ಕೊನೆಯ ಹಾಡು </li>
+<li page="">ಏನನೆಣಿಸುತಲಿರುವೆ ? </li>
+<li page="">ರೊಟ್ಟಿಯ ರಾಗ </li>
+<li page="">ಶ್ರೀ ಕೃಷ್ಣನಿಗೆ</li>
+<li page="">ನುಸಿಗೆ </li>
+<li page="">ನಾ ಕವಿಂ ಮಾನವಂ ಮನ್ಯೇ </li>
+<li page="">ಹೊಸ ಕವಿತೆಯನ್ನು ದೂರುವವರಿಗೆ </li>
+<li page="">ಆರೆಂಬರೀಜಗವು ದುಗುಡದರಮನೆಯೆಂದು</li>
+<li page="">ಗುಲಾಬಿ ಹೂವಿಗೆ </li>
+<li page="">ಯುದ್ಧ </li>
+<li page="">ನನ್ನ ಗೋರಿಯ ಮೇಲೆ </li>
+<li page="">ಇದು ಏಕೆ ಹೀಗಾಯ್ತು </li>
+<li page="">ಆಕಾಂಕ್ಷೆಯೊಂದಿಹುದು </li>
+<li page="">ನನ್ನ ಕಾವ್ಯ </li>
+<li page="">ಮಗುವಿಗೆ</li>
+<li page="">ಬಾರೆಂದು ಕರೆದಾಗ </li>
+<li page="">ಒಂದು ಕಾಗದ</li>
+<li page="">ಬಯಕೆಯ ಬೆನ್ನು ಹತ್ತಿ </li>
+<li page="">ಅಮರ ಮಹಾತ್ಮ </li>
+<li page="">ಸತ್ಯದರ್ಶನ </li>
+<li page="">ಗಾತ್ರ - ಚಿತ್ರ </li>
+<li page="">ಉದ್ದೇಶ </li>
+<li page="">ಕವಿ- ವಿಜ್ಞಾನಿಗೆ </li>
+<li page="">ಸುಗ್ಗಿ ಯ ಹಾಡು </li>
+<li page="">ನವನೀರದ</li>
 <li page="">'ಕೆಲವು ಪದ್ಯಗಳು' ಸಂಗ್ರಹದಿಂದ ಎರಡು ಮಾತು </li>
-<li page="">೪೪. ನಲುವತ್ತರ ನೆರೆಯಲ್ಲಿ </li>
-<li page="">೪೫. ಉಪೋದ್-ಘಾತ </li>
-<li page="">೪೬. ಗೋಪಿ</li>
-<li page="">೪೭. ಅಸಿಧಾರಾವೃತ </li>
-<li page="">೪೮. ಮೊಸ </li>
-<li page="">೪೯. ಅನಿಸುತಿದೆ </li>
-<li page="">೫೦. ವಿಕಾರಿ</li>
-<li page="">೫೧. ಬದಲಾವಣೆ </li>
-<li page="">೫೨. ಆತ್ಮಬಾಂಬು</li>
-<li page="">೫೩. ಹೌಸಿಂಗ್ ಕಾಲನಿ</li>
-<li page="">೫೪.  ಅರಳಿಮರ </li>
-<li page="">೫೫. ನವ್ಯ</li>
-<li page="">೫೬. ಕಲೆ</li>
-<li page="">೫೭. ನೋಣ</li>
-<li page="">೫೮. ಶಿಲ್ಪಪ್ರಿಯ</li>
-<li page="">೫೯. ಸತ್ತವರು</li>
-<li page="">೬೦. ದುರಂತಗಳು</li>
-<li page="">೬೧. ಅಫಲಿತ</li>
-<li page="">೬೨. ಕಾಲ</li>
-<li page="">೬೩. ಗಾಂಧಿಗೆ </li>
-<li page="">೬೪. ಎರಡು ದಾರಿ</li>
-<li page="">೬೫. ಸಂಜೆ ಹೊತ್ತು</li>
-<li page="">೬೬. ಕವಿ ಮತ್ತು ಕೋಗಿಲೆ </li>
-<li page="">೬೭. ಬಲಿ</li>
-<li page="">೬೮. ದತ್ತನ ನೆನಪು</li>
-<li page="">೬೯. ಕೊಡೆ</li>
-<li page="">೭೦. ದ್ವಾ ಸುಪರ್ಣಾ</li>
-<li page="">೭೧.  ಬಿನ್ನಹ</li>
-<li page="">೭೨. ಗೀತಾಧ್ಯಾಯ ೧೯</li>
-<li page="">೭೩. ಯಾಹ್ಯಾ ಖಾನ್ ಹೇಳದೇ ಇದ್ದದ್ದು </li>
-<li page="">೭೪. ತುರ್ತಿನ ರಾಮಾಯಣ</li>
-<li page="">೭೫. ಬದುಕಿನ ಬದುಕು</li>
-<li page="">೭೬. ರಾಮದೇವರ ಸತ್ಯ</li>
+<li page="">ನಲುವತ್ತರ ನೆರೆಯಲ್ಲಿ </li>
+<li page="">ಉಪೋದ್-ಘಾತ </li>
+<li page="">ಗೋಪಿ</li>
+<li page="">ಅಸಿಧಾರಾವೃತ </li>
+<li page="">ಮೊಸ </li>
+<li page="">ಅನಿಸುತಿದೆ </li>
+<li page="">ವಿಕಾರಿ</li>
+<li page="">ಬದಲಾವಣೆ </li>
+<li page="">ಆತ್ಮಬಾಂಬು</li>
+<li page="">ಹೌಸಿಂಗ್ ಕಾಲನಿ</li>
+<li page="">ಅರಳಿಮರ </li>
+<li page="">ನವ್ಯ</li>
+<li page="">ಕಲೆ</li>
+<li page="">ನೋಣ</li>
+<li page="">ಶಿಲ್ಪಪ್ರಿಯ</li>
+<li page="">ಸತ್ತವರು</li>
+<li page="">ದುರಂತಗಳು</li>
+<li page="">ಅಫಲಿತ</li>
+<li page="">ಕಾಲ</li>
+<li page="">ಗಾಂಧಿಗೆ </li>
+<li page="">ಎರಡು ದಾರಿ</li>
+<li page="">ಸಂಜೆ ಹೊತ್ತು</li>
+<li page="">ಕವಿ ಮತ್ತು ಕೋಗಿಲೆ </li>
+<li page="">ಬಲಿ</li>
+<li page="">ದತ್ತನ ನೆನಪು</li>
+<li page="">ಕೊಡೆ</li>
+<li page="">ದ್ವಾ ಸುಪರ್ಣಾ</li>
+<li page="">ಬಿನ್ನಹ</li>
+<li page="">ಗೀತಾಧ್ಯಾಯ ೧೯</li>
+<li page="">ಯಾಹ್ಯಾ ಖಾನ್ ಹೇಳದೇ ಇದ್ದದ್ದು </li>
+<li page="">ತುರ್ತಿನ ರಾಮಾಯಣ</li>
+<li page="">ಬದುಕಿನ ಬದುಕು</li>
+<li page="">ರಾಮದೇವರ ಸತ್ಯ</li>
 <li page="">ಪೆಂಗೋಪದೇಶ </li>
 <li page="">ಅನುಬಂಧಗಳು : </li>
-<li page="">೧. गोपी-गीता  </li>
-<li page="">೨. ಅಭಿಮತ  ಡಾ. ಸಿದ್ಧಲಿಂಗ ಪಟ್ಟಣಶೆಟ್ಟಿ</li>
+<li page="">गोपी-गीता  </li>
+<li page="">ಅಭಿಮತ  ಡಾ. ಸಿದ್ಧಲಿಂಗ ಪಟ್ಟಣಶೆಟ್ಟಿ</li>
 <li page="">ಪದ್ಯಗಳ ಅಕಾರಾದಿ ಸೂಚಿ</li>
 </ol>
 </div>
