--- a/application/views/flat/3-Books/015.xhtml
+++ b/application/views/flat/3-Books/015.xhtml
@@ -1,63 +1,62 @@
 ﻿<div data-bcode="015">
 	<h1 class="title" data-language="kannada">ಇವರೇ ಲಾಂಗೂಲಾಚಾರ್ಯರು !</h1>
 	<ol>
-<li page="">ಪರಿವಿಡಿ</li>
-<li page="">೧.ಕಳಾಪೂರ್ಣ ಆಯುಷ್ಕರ್ಮಶಾಲಾ</li>
-<li page="">೨. ಕಳ್ಳನ ಹೆಜ್ಜೆ ಮತ್ತು ಈಶಸಂಕಲ್ಪ</li>
-<li page="">೩.ಕಳೆದುಹೋದ ಪ್ರವಾಸಾನಂದ </li>
-<li page="">೪. ಕಿಂ ಕರ್ತವ್ಯ......?</li>
-<li page="">೫.ಕುರಿನಾಡಿನಲ್ಲಿ ಕಲಿಗಾಲ </li>
-<li page="">೬.ಕೂಷ್ಮಾಂಡ ವಿಜಯಂ</li>
-<li page="">೭.ಕೊಡೆಯಂಬರ್ ಆತಪತ್ರವನ್ </li>
-<li page="">೮. ಕ್ಯೂ ಗಾಂಧಿ ಮತ್ತು ನಾನು ! </li>
-<li page="">೯. ಕ್ಷೌರಚಿಂತನೆ </li>
-<li page="">೧೦. ಗಾರ್ದಭೋಪಾಖ್ಯಾನಂ </li>
-<li page="">೧೧. ಒಂದು ಗಣಿತ ಸಮಸ್ಯೆ </li>
-<li page="">೧೨. ಒಂದು ಕಪ್ ಚಹಾ </li>
-<li page="">೧೩. ಎಷ್ಟು ಕರ್ನಾಟಕ ? </li>
-<li page="">೧೪. ಉಪಕಾರ ಮಾಡಿ ನೋಡಿ ! </li>
-<li page="">೧೫. ಈರುಳ್ಳಿ ಮಹಿಮೆ </li>
-<li page="">೧೬. ಇರಬೇಕು ನಿಂದಕರು </li>
-<li page="">೧೭. ಇಡಲಿ ಶಾಸ್ತ್ರ </li>
-<li page="">೧೮. 'ಇಜಂ' ವಿರೋಧಿ 'ಜಂ' </li>
-<li page="">೧೯. ಅಭಿಮಾನ ಕಾಡಿತ್ತು ನೋಡಾ ! </li>
-<li page="">೨೦. ಅತ್ಯಂತ ಶಾಸ್ತ್ರಿಗಳು </li>
-<li page="">೨೧. ಗೊಣಗಿ ಗೊಣಗಿ ಕ್ರಾಂತಿ ತಪ್ಪಿಸಿರಿ </li>
-<li page="">೨೨. ಗೋಹತ್ಯೆ ಮಾಡಿರಿ </li>
-<li page="">೨೩. ಜೀವನ ವ್ಯಾಪಾರ </li>
-<li page=""> ೨೪. ಟಪಾಲು ಸಂಪು ಮತ್ತು ಆಚಾರ್ಯರರು </li>
-<li page=""> ೨೫. "ನಡೆಯುತ್ತದೆ !"  </li>
-<li page=""> ೨೬. ನನ್ನ ಮಿತ್ರ ತಾಮಸಾನಂದರು </li>
-<li page=""> ೨೭. ನಾಮಾಂತಕರಣ </li>
-<li page=""> ೨೮. ನಾರದ ವಿಜಯ</li>
-<li page=""> ೨೯. ನಿಮಗೆ ಬೋರಾಗುತ್ತಾ? </li>
-<li page=""> ೩೦. ನಿಮ್ಮ ಹೆಸರಿನ ಬಾಲ</li>
-<li page=""> ೩೧. ನಿಶ್ಯಬ್ದ ಸಂಘ </li>
-<li page=""> ೩೨. ನಿರುದ್ಯೋಗಿಗಳ ಪರಿಷತ್ತು </li>
-<li page=""> ೩೩. ನಿವೃತ್ತಾಧಿಕಾರಿಗಳ ವಾನಪ್ರಮಗೆ ಬೋರಾಗುತ್ತಾ? </li>
-<li page=""> ೩೪. ನಿಷ್ಕರ್ಮ ಸಿದ್ಧರ ಮಹತಿ </li>
-<li page=""> ೩೫. ನೀವು ಹೆಂಡತೀನ ಹೊಡೆಯೋದು ಬಿಟ್ಟಿದ್ದೀರಾ? </li>
-<li page=""> ೩೬. ಪತಿಪೂಜನ - ಲೇಟೆಸ್ಟ್ ಯಜ್ಞ </li>
-<li page=""> ೩೭. ಪರಮ ಪುರುಷ ಚಕ್ರ </li>
-<li page=""> ೩೮. ಪರೀಕ್ಷಾ ಪರೀಕ್ಷಣಮ್ </li>
-<li page=""> ೩೯. ಪಶ್ಚಾತ್ತಾಪದ ಮುದ್ದೆಗಳು </li>
-<li page=""> ೪೦. ಪಾಶಜಿಜ್ಞಾಸಾ </li>
-<li page=""> ೪೧. ಪಿಡುಗಿಗೆ ನಮಸ್ಕಾರ </li>
-<li page=""> ೪೨. ಪ್ರಮೀಳೆಯರ ಪೂರ್ಣ ಸ್ವರಾಜ್ಯ </li>
-<li page=""> ೪೩. ಪ್ರಾಮಾಣಿಕರಿಗೇಕೆ ಚುನಾವಣಿ ಭಾಷಣ? </li>
-<li page=""> ೪೪. ಬನ್ನಿ ರೆಕಾರ್ಡ್ ಒಡೆಯಿರಿ! </li>
-<li page=""> ೪೫. ಬುದ್ಧಿದಾನವೋ ಬಲಸಂವರ್ಧನೆಯೊ? </li>
-<li page=""> ೪೬. ಬ್ರಹ್ಮಚಾರಿಗಳ ಶಪಥ </li>
-<li page=""> ೪೭. ಭಪ್ಪರೆ ಮೆಣಸಿನಕಾಯಿ! </li>
-<li page=""> ೪೮. ಮದುವೆ ಮತ್ತು ಹುಚ್ಚು </li>
-<li page=""> ೪೯. ಮಾದರಿ ಮಡದಿ ಬೇಕೆ ? </li>
-<li page=""> ೫೦. ಶಂಕು ಸ್ಥಾಪನಾ ನಿಯಂತ್ರಣ ಮಸೂದೆ </li>
-<li page=""> ೫೧. ಶಾಸ್ತ್ರಾರ್ಥ ಸಂಜೀವಿನಿ </li>
-<li page=""> ೫೨. ಶ್ಮಶ್ರು ಚಿಂತಾರತ್ನಂ </li>
-<li page=""> ೫೩. ಸಂಕ್ಷೇಪ ರಾಮಾಯಣಂ </li>
-<li page=""> ೫೪. ಸಲಹೆಗಳು - ಅನ್-ಲಿಮಿಟೆಡ್ </li>
-<li page=""> ೫೫. ಸವ್ವಾಸೇರು </li>
-<li page=""> ೫೬. ಸಹಸ್ರನಾಮ್ನೇ ಪುರುಷಾಯ </li>
-<li page=""> ೫೭. ಸೇವಕರೇ ಎಲ್ಲಾ</li>
+<li page="">ಕಳಾಪೂರ್ಣ ಆಯುಷ್ಕರ್ಮಶಾಲಾ</li>
+<li page="">ಕಳ್ಳನ ಹೆಜ್ಜೆ ಮತ್ತು ಈಶಸಂಕಲ್ಪ</li>
+<li page="">ಕಳೆದುಹೋದ ಪ್ರವಾಸಾನಂದ </li>
+<li page="">ಕಿಂ ಕರ್ತವ್ಯ......?</li>
+<li page="">ಕುರಿನಾಡಿನಲ್ಲಿ ಕಲಿಗಾಲ </li>
+<li page="">ಕೂಷ್ಮಾಂಡ ವಿಜಯಂ</li>
+<li page="">ಕೊಡೆಯಂಬರ್ ಆತಪತ್ರವನ್ </li>
+<li page="">ಕ್ಯೂ ಗಾಂಧಿ ಮತ್ತು ನಾನು ! </li>
+<li page="">ಕ್ಷೌರಚಿಂತನೆ </li>
+<li page="">ಗಾರ್ದಭೋಪಾಖ್ಯಾನಂ </li>
+<li page="">ಒಂದು ಗಣಿತ ಸಮಸ್ಯೆ </li>
+<li page="">ಒಂದು ಕಪ್ ಚಹಾ </li>
+<li page="">ಎಷ್ಟು ಕರ್ನಾಟಕ ? </li>
+<li page="">ಉಪಕಾರ ಮಾಡಿ ನೋಡಿ ! </li>
+<li page="">ಈರುಳ್ಳಿ ಮಹಿಮೆ </li>
+<li page="">ಇರಬೇಕು ನಿಂದಕರು </li>
+<li page="">ಇಡಲಿ ಶಾಸ್ತ್ರ </li>
+<li page="">'ಇಜಂ' ವಿರೋಧಿ 'ಜಂ' </li>
+<li page="">ಅಭಿಮಾನ ಕಾಡಿತ್ತು ನೋಡಾ ! </li>
+<li page="">ಅತ್ಯಂತ ಶಾಸ್ತ್ರಿಗಳು </li>
+<li page="">ಗೊಣಗಿ ಗೊಣಗಿ ಕ್ರಾಂತಿ ತಪ್ಪಿಸಿರಿ </li>
+<li page="">ಗೋಹತ್ಯೆ ಮಾಡಿರಿ </li>
+<li page="">ಜೀವನ ವ್ಯಾಪಾರ </li>
+<li page="">ಟಪಾಲು ಸಂಪು ಮತ್ತು ಆಚಾರ್ಯರರು </li>
+<li page="">"ನಡೆಯುತ್ತದೆ !"  </li>
+<li page="">ನನ್ನ ಮಿತ್ರ ತಾಮಸಾನಂದರು </li>
+<li page="">ನಾಮಾಂತಕರಣ </li>
+<li page="">ನಾರದ ವಿಜಯ</li>
+<li page="">ನಿಮಗೆ ಬೋರಾಗುತ್ತಾ? </li>
+<li page="">ನಿಮ್ಮ ಹೆಸರಿನ ಬಾಲ</li>
+<li page="">ನಿಶ್ಯಬ್ದ ಸಂಘ </li>
+<li page="">ನಿರುದ್ಯೋಗಿಗಳ ಪರಿಷತ್ತು </li>
+<li page="">ನಿವೃತ್ತಾಧಿಕಾರಿಗಳ ವಾನಪ್ರಮಗೆ ಬೋರಾಗುತ್ತಾ? </li>
+<li page="">ನಿಷ್ಕರ್ಮ ಸಿದ್ಧರ ಮಹತಿ </li>
+<li page="">ನೀವು ಹೆಂಡತೀನ ಹೊಡೆಯೋದು ಬಿಟ್ಟಿದ್ದೀರಾ? </li>
+<li page="">ಪತಿಪೂಜನ - ಲೇಟೆಸ್ಟ್ ಯಜ್ಞ </li>
+<li page="">ಪರಮ ಪುರುಷ ಚಕ್ರ </li>
+<li page="">ಪರೀಕ್ಷಾ ಪರೀಕ್ಷಣಮ್ </li>
+<li page="">ಪಶ್ಚಾತ್ತಾಪದ ಮುದ್ದೆಗಳು </li>
+<li page="">ಪಾಶಜಿಜ್ಞಾಸಾ </li>
+<li page="">ಪಿಡುಗಿಗೆ ನಮಸ್ಕಾರ </li>
+<li page="">ಪ್ರಮೀಳೆಯರ ಪೂರ್ಣ ಸ್ವರಾಜ್ಯ </li>
+<li page="">ಪ್ರಾಮಾಣಿಕರಿಗೇಕೆ ಚುನಾವಣಿ ಭಾಷಣ? </li>
+<li page="">ಬನ್ನಿ ರೆಕಾರ್ಡ್ ಒಡೆಯಿರಿ! </li>
+<li page="">ಬುದ್ಧಿದಾನವೋ ಬಲಸಂವರ್ಧನೆಯೊ? </li>
+<li page="">ಬ್ರಹ್ಮಚಾರಿಗಳ ಶಪಥ </li>
+<li page="">ಭಪ್ಪರೆ ಮೆಣಸಿನಕಾಯಿ! </li>
+<li page="">ಮದುವೆ ಮತ್ತು ಹುಚ್ಚು </li>
+<li page="">ಮಾದರಿ ಮಡದಿ ಬೇಕೆ ? </li>
+<li page="">ಶಂಕು ಸ್ಥಾಪನಾ ನಿಯಂತ್ರಣ ಮಸೂದೆ </li>
+<li page="">ಶಾಸ್ತ್ರಾರ್ಥ ಸಂಜೀವಿನಿ </li>
+<li page="">ಶ್ಮಶ್ರು ಚಿಂತಾರತ್ನಂ </li>
+<li page="">ಸಂಕ್ಷೇಪ ರಾಮಾಯಣಂ </li>
+<li page="">ಸಲಹೆಗಳು - ಅನ್-ಲಿಮಿಟೆಡ್ </li>
+<li page="">ಸವ್ವಾಸೇರು </li>
+<li page="">ಸಹಸ್ರನಾಮ್ನೇ ಪುರುಷಾಯ </li>
+<li page="">ಸೇವಕರೇ ಎಲ್ಲಾ</li>
 </ol>
 </div>
