--- a/application/views/flat/3-Books/018.xhtml
+++ b/application/views/flat/3-Books/018.xhtml
@@ -2,41 +2,41 @@
 	<h1 class="title" data-language="kannada">ಪಾ. ವೆಂ. ಆಚಾರ್ಯ ಆಯ್ದ ಹರಟೆಗಳು</h1>
 	<ol>
 <li page="">ಪರಿವಿಡಿ</li>
-<li page="">೧. ಸಂಗೀತ ಮಹಿಮ </li>
-<li page="">೨. ಮಕ್ಷಿಕಧ್ವಂಸಕ ಯಂತ್ರ </li>
-<li page="">೩. ನಿಮ್ಮ ಅಲರ್ಜಿ ಯಾವುದು?</li>
-<li page="">೪.ಚಂದ್ರಲೋಕಕ್ಕೇಕೆ ಹೋಗಬೇಕು ? </li>
-<li page="">೫.ಸಂತೋಷ ಘಾತಕರು </li>
-<li page="">೬.ಶ್ರೀಮನ್ನಾರಾಯಣನ ನಿವೃತ್ತಿ...</li>
-<li page="">೭.ಆನೆಚರ್ಮ </li>
-<li page="">೮. ಮೂಷಕ ಪುರಾಣ</li>
-<li page="">೯.ಯಾರೂ ಕೆಮ್ಮಬಾರದು</li>
-<li page="">೧೦. ಅಡಿಗಲ್ಲು ಸಮಾರಂಭ </li>
-<li page="">೧೧. ದೇವರ ಕೆಲಸ </li>
-<li page="">೧೨. ಕಳೆದುಹೋದ ಚಪ್ಪಲಿ </li>
-<li page="">೧೩. "ಕಥಕ್ಕಳಿ"ಗೊಂದು ಅವಕಾಶ </li>
-<li page="">೧೪. ಏಕ ಬತ್ತಿ - ಏಕ ರಾಸ್ತಾ </li>
-<li page="">೧೫. ಐದು ಸಾಲದು, ಏಳು ಬೇಕು </li>
-<li page="">೧೬. ಪಾದುಕಾ ಉಪಚಾರ </li>
-<li page="">೧೭. ಮಾವು ಎಂಬ ಹಣ್ಣು </li>
-<li page="">೧೮. ಗದ್ದಲ ಮಾಡಿ </li>
-<li page="">೧೯. ಬೆಣ್ಣೆ ಹಾಕುವುದು </li>
-<li page="">೨೦. ರಾಜಕೀಯ ಗುಳಿಗೆಗಳು</li>
-<li page="">೨೧. ಬುದ್ದಿವಂತರು ಯಾರು ? </li>
-<li page="">೨೨. ಬಿರುದಿಲ್ಲದ ಭಾರತ </li>
-<li page="">೨೩. ಒಂದು ಪ್ರತ್ಯೇಕ ಸಂದರ್ಶನ </li>
-<li page="">೨೪. ಕಾಯದೆ ಮತ್ತು ದೊಡ್ಡವರು </li>
-<li page="">೨೫. ರೋಗಿಗಳು ಯಾಕೆ ಸತ್ತರು ? </li>
-<li page="">೨೬. ಚುಂಬನದ ರಾದ್ದಾಂತ </li>
-<li page="">೨೭. ನಿಮ್ಮ ನಾತೆ ಯಾವುದು? </li>
-<li page="">೨೮. ಹಳದಿ ಪತ್ರಿಕೆಗಳು </li>
-<li page="">೨೯. ಮಹಿಷ ನೀತಿ ಸುಧಾರಣೆ </li>
-<li page="">೩೦. ವೇದಾಂತ ಮತ್ತು ಸ್ತ್ರೀಕಲಹ </li>
-<li page="">೩೧. ಸವತಿ ಮತ್ಸರ </li>
-<li page="">೩೨. ಬಸ್ಸಿನಲ್ಲಿ ಸ್ವಾತಂತ್ರ್ಯ </li>
-<li page="">೩೩. ಎರಡನೇ ಮದುವೆ </li>
-<li page="">೩೪. ಚುನಾವಣೆ ಸ್ವಾರಸ್ಯಗಳು </li>
-<li page="">೩೫. ಘಾತಕ ಹರ್ಷೋನ್ಮಾದ </li>
-<li page="">೩೬. ಸುದ್ದಿಸ್ವಾರಸ್ಯ</li>
+<li page="">ಸಂಗೀತ ಮಹಿಮ </li>
+<li page="">ಮಕ್ಷಿಕಧ್ವಂಸಕ ಯಂತ್ರ </li>
+<li page="">ನಿಮ್ಮ ಅಲರ್ಜಿ ಯಾವುದು?</li>
+<li page="">ಚಂದ್ರಲೋಕಕ್ಕೇಕೆ ಹೋಗಬೇಕು ? </li>
+<li page="">ಸಂತೋಷ ಘಾತಕರು </li>
+<li page="">ಶ್ರೀಮನ್ನಾರಾಯಣನ ನಿವೃತ್ತಿ...</li>
+<li page="">ಆನೆಚರ್ಮ </li>
+<li page="">ಮೂಷಕ ಪುರಾಣ</li>
+<li page="">ಯಾರೂ ಕೆಮ್ಮಬಾರದು</li>
+<li page="">ಅಡಿಗಲ್ಲು ಸಮಾರಂಭ </li>
+<li page="">ದೇವರ ಕೆಲಸ </li>
+<li page="">ಕಳೆದುಹೋದ ಚಪ್ಪಲಿ </li>
+<li page="">"ಕಥಕ್ಕಳಿ"ಗೊಂದು ಅವಕಾಶ </li>
+<li page="">ಏಕ ಬತ್ತಿ - ಏಕ ರಾಸ್ತಾ </li>
+<li page="">ಐದು ಸಾಲದು, ಏಳು ಬೇಕು </li>
+<li page="">ಪಾದುಕಾ ಉಪಚಾರ </li>
+<li page="">ಮಾವು ಎಂಬ ಹಣ್ಣು </li>
+<li page="">ಗದ್ದಲ ಮಾಡಿ </li>
+<li page="">ಬೆಣ್ಣೆ ಹಾಕುವುದು </li>
+<li page="">ರಾಜಕೀಯ ಗುಳಿಗೆಗಳು</li>
+<li page="">ಬುದ್ದಿವಂತರು ಯಾರು ? </li>
+<li page="">ಬಿರುದಿಲ್ಲದ ಭಾರತ </li>
+<li page="">ಒಂದು ಪ್ರತ್ಯೇಕ ಸಂದರ್ಶನ </li>
+<li page="">ಕಾಯದೆ ಮತ್ತು ದೊಡ್ಡವರು </li>
+<li page="">ರೋಗಿಗಳು ಯಾಕೆ ಸತ್ತರು ? </li>
+<li page="">ಚುಂಬನದ ರಾದ್ದಾಂತ </li>
+<li page="">ನಿಮ್ಮ ನಾತೆ ಯಾವುದು? </li>
+<li page="">ಹಳದಿ ಪತ್ರಿಕೆಗಳು </li>
+<li page="">ಮಹಿಷ ನೀತಿ ಸುಧಾರಣೆ </li>
+<li page="">ವೇದಾಂತ ಮತ್ತು ಸ್ತ್ರೀಕಲಹ </li>
+<li page="">ಸವತಿ ಮತ್ಸರ </li>
+<li page="">ಬಸ್ಸಿನಲ್ಲಿ ಸ್ವಾತಂತ್ರ್ಯ </li>
+<li page="">ಎರಡನೇ ಮದುವೆ </li>
+<li page="">ಚುನಾವಣೆ ಸ್ವಾರಸ್ಯಗಳು </li>
+<li page="">ಘಾತಕ ಹರ್ಷೋನ್ಮಾದ </li>
+<li page="">ಸುದ್ದಿಸ್ವಾರಸ್ಯ</li>
 </ol>
 </div>
