--- a/application/views/flat/3-Books/027.xhtml
+++ b/application/views/flat/3-Books/027.xhtml
@@ -4,19 +4,19 @@
 <li page="">ಪರಿವಿಡಿ</li>
 <li page="">ಬರೆತಿನಾಯನ ಅರಿಕೆ </li>
 <li page="">ಪ್ರಕಾಶಕೆರ್‌ನ ಪಾತೆರ</li>
-<li page="">1. ಸತ್ಯೊಗು ಪ್ರಾರ್ತನೆ </li>
-<li page="">2. ತುಳುನಾಡ್ ದ  ನಿನೆಪು </li>
-<li page="">3. ರಾಮದೇವೆರೆ ಸತ್ಯ </li>
-<li page="">4.ಗೋಪಿ</li>
-<li page="">5.ಅರ್ತ </li>
-<li page="">6. ಯುಗಾದಿ-ದುರ್ಮತಿ </li>
-<li page="">7. ಬಡವು </li>
-<li page="">8. ಕೆಡಿ 1-4 </li>
-<li page="">9. ಸಂಸ್ಕೃುತೊಡ್ಡು </li>
-<li page="">10. ಗೌತಮಿ-ಗೌತಮೆ </li>
-<li page="">11. ಬಿನ್ನಯ </li>
-<li page="">12. ಎನ್ನ ರಾಮಾಯಣ </li>
-<li page="">13. ಆಯಿಜಿ ನರಮಾನಿ </li>
-<li page="">14. ಆಯೆ ಬತ್ತೆ ಉಂಬೈ ಬತ್ತೆ</li>
+<li page="">ಸತ್ಯೊಗು ಪ್ರಾರ್ತನೆ </li>
+<li page="">ತುಳುನಾಡ್ ದ  ನಿನೆಪು </li>
+<li page="">ರಾಮದೇವೆರೆ ಸತ್ಯ </li>
+<li page="">ಗೋಪಿ</li>
+<li page="">ಅರ್ತ </li>
+<li page="">ಯುಗಾದಿ-ದುರ್ಮತಿ </li>
+<li page="">ಬಡವು </li>
+<li page="">ಕೆಡಿ 1-4 </li>
+<li page="">ಸಂಸ್ಕೃುತೊಡ್ಡು </li>
+<li page="">ಗೌತಮಿ-ಗೌತಮೆ </li>
+<li page="">ಬಿನ್ನಯ </li>
+<li page="">ಎನ್ನ ರಾಮಾಯಣ </li>
+<li page="">ಆಯಿಜಿ ನರಮಾನಿ </li>
+<li page="">ಆಯೆ ಬತ್ತೆ ಉಂಬೈ ಬತ್ತೆ</li>
 </ol>
 </div>
