--- a/application/views/flat/3-Books/028.xhtml
+++ b/application/views/flat/3-Books/028.xhtml
@@ -2,28 +2,28 @@
 	<h1 class="title" data-language="kannada">ವಕ್ರ ದೃಷ್ಟಿ</h1>
 	<ol>
 <li>ಪರಿವಿಡಿ </li>
-<li page="">೧ ಹಾಸ್ಯ ಮೀಮಾಂಸೆ</li>
-<li page=""> ೨. ನಿಮ್ಮ ಅಲರ್ಜಿ ಯಾವುದು ? </li>
-<li page=""> ೩. ಎಷ್ಟು ಕರ್ನಾಟಕ ? </li>
-<li page=""> ೪. ಭಾವಿ ಜಗತ್ತಿನಲ್ಲಿ ಮಹಿಳೆಯರ ಸ್ಥಾನ </li>
-<li page=""> ೫. ಕಪ್ಪುಕಪ್ಪೆಂದೇಕೆ ಬೀಳುಗಳೆವಿರಿ ? </li>
-<li page=""> ೬. ವಾಲ್ಮೀಕಿಯ ಸಂತಾನ </li>
-<li page=""> ೭. ಮದುವೆಯಾದರೂ ಸುಖ ಹೇಗೆ ಪಡೆಯಬೇಕು </li>
-<li page=""> ೮. ದೇವತಾ ಚಟಗಳು </li>
-<li page=""> ೯. ವಾನರಾಯಣ </li>
-<li page=""> ೧೦. ಶಾಸ್ತ್ರ ಮಂಜರಿ </li>
-<li page=""> ೧೧. ಶಕುನಿ ಶಂಕಯ್ಯನವರ ಚರಿತ್ರೆ </li>
-<li page=""> ೧೨. ವಿಪರೀತ ಧ್ಯಾನಯೋಗಿಯೊಡನೆ ಒಂದು ಗಳಿಗೆ </li>
-<li page=""> ೧೩. ತಾಯಿ ಬೇಕಂತೆ ! </li>
-<li page=""> ೧೪. ತರಲೆ ತಾರಮ್ಮಯ್ಯನವರು </li>
-<li page=""> ೧೫. ತ್ರಿಮೂರ್ತಿಗಳ ವಿಚಾರಣಾ ವೈಖರಿ </li>
-<li page=""> ೧೬. ಮಶಕ ಪುರಾಣ </li>
-<li page=""> ೧೭. ನಾನು ಪೋಲೀಸ್ ಕಂಪ್ಲೈಂಟ್ ಕೊಟ್ಟೆ </li>
-<li page=""> ೧೮. ಸಹಕರಿಸುವ ಸಮಸ್ಯೆ </li>
-<li page=""> ೧೯. ಸಾಂಸದಿಕ ನಿದ್ರೆ </li>
-<li page=""> ೨೦. ತೊಗಲಖ ಲ್ಯಾಂಡಿನಿಂದೊಂದು ವರದಿ </li>
-<li page=""> ೨೧. ಗೋಹತ್ಯೆ ಮಾಡಿರಿ </li>
-<li page=""> ೨೨. ಕುರಿನಾಡಿನಲ್ಲಿ ಕಲಿಗಾಲ </li>
-<li page=""> ೨೩. ಕ್ರಿಕೆಟ್ ಕಾಮೆಂಟ್ರಿ</li>
+<li page="">ಹಾಸ್ಯ ಮೀಮಾಂಸೆ</li>
+<li page="">ನಿಮ್ಮ ಅಲರ್ಜಿ ಯಾವುದು ? </li>
+<li page="">ಎಷ್ಟು ಕರ್ನಾಟಕ ? </li>
+<li page="">ಭಾವಿ ಜಗತ್ತಿನಲ್ಲಿ ಮಹಿಳೆಯರ ಸ್ಥಾನ </li>
+<li page="">ಕಪ್ಪುಕಪ್ಪೆಂದೇಕೆ ಬೀಳುಗಳೆವಿರಿ ? </li>
+<li page="">ವಾಲ್ಮೀಕಿಯ ಸಂತಾನ </li>
+<li page="">ಮದುವೆಯಾದರೂ ಸುಖ ಹೇಗೆ ಪಡೆಯಬೇಕು </li>
+<li page="">ದೇವತಾ ಚಟಗಳು </li>
+<li page="">ವಾನರಾಯಣ </li>
+<li page="">ಶಾಸ್ತ್ರ ಮಂಜರಿ </li>
+<li page="">ಶಕುನಿ ಶಂಕಯ್ಯನವರ ಚರಿತ್ರೆ </li>
+<li page="">ವಿಪರೀತ ಧ್ಯಾನಯೋಗಿಯೊಡನೆ ಒಂದು ಗಳಿಗೆ </li>
+<li page="">ತಾಯಿ ಬೇಕಂತೆ ! </li>
+<li page="">ತರಲೆ ತಾರಮ್ಮಯ್ಯನವರು </li>
+<li page="">ತ್ರಿಮೂರ್ತಿಗಳ ವಿಚಾರಣಾ ವೈಖರಿ </li>
+<li page="">ಮಶಕ ಪುರಾಣ </li>
+<li page="">ನಾನು ಪೋಲೀಸ್ ಕಂಪ್ಲೈಂಟ್ ಕೊಟ್ಟೆ </li>
+<li page="">ಸಹಕರಿಸುವ ಸಮಸ್ಯೆ </li>
+<li page="">ಸಾಂಸದಿಕ ನಿದ್ರೆ </li>
+<li page="">ತೊಗಲಖ ಲ್ಯಾಂಡಿನಿಂದೊಂದು ವರದಿ </li>
+<li page="">ಗೋಹತ್ಯೆ ಮಾಡಿರಿ </li>
+<li page="">ಕುರಿನಾಡಿನಲ್ಲಿ ಕಲಿಗಾಲ </li>
+<li page="">ಕ್ರಿಕೆಟ್ ಕಾಮೆಂಟ್ರಿ</li>
 </ol>
 </div>
