--- a/application/views/flat/3-Books/005.xhtml
+++ b/application/views/flat/3-Books/005.xhtml
@@ -3,47 +3,47 @@
 	<ol>
 <li page="">ಪರಿವಿಡಿ</li>
 <li page="">ಲೇಖನ</li>
-<li page="">೧. ಅಂಬೇಡಕರರು ಹಾಗೇಕಾದರು ? </li>
-<li page="">೨. ಪಶ್ಚಿಮಕ್ಕೆ ಯೋಗಮಾರ್ಗ ತೋರಿಸಿದ ಸುಂದರರಾಜ ಅಯ್ಯಂಗಾರ್ </li>
-<li page="">೩. ಆದರ್ಶ ರೈತ ಚೆನ್ನಮಲ್ಲಪ್ಪ ಅಸುಂಡಿಯವರು </li>
-<li page="">೪. ಆನಂದಿಬಾಯಿ ಜೋಶಿ </li>
-<li page="">೫. ಶಿಕ್ಷಣತಜ್ಞ ಒಡೆಯರರೊಂದಿಗೆ ಒಂದೆರಡು ಗಂಟೆ </li>
-<li page="">೬. ಟೈಪ್‌ರೈಟರ್ ನಿರ್ಮಿಸಿದ ಕಟ್ಟಿಯವರು </li>
-<li page="">೭. ರಂಟೆಯಿಂದ ಮೋಟಾರ್: ಕಿರ್ಲೋಸ್ಕರ ನಡೆದು ಬಂದ ದಾರಿ </li>
-<li page="">೮. ಡಾ. ಆನಂದ ಕುಮಾರಸ್ವಾಮಿ </li>
-<li page="">೯. ನಾಟ್ಯಾಚಾರ ಶ್ರೀನಿವಾಸ ಕುಲಕರ್ಣಿ </li>
-<li page="">೧೦. ಸುಚೇತಾ ಕೃಪಲಾನಿ </li>
-<li page="">೧೧. ಜಗದ್ಗುರುವಾಗಲೊಲ್ಲದ ಜೆ. ಕೃಷ್ಣಮೂರ್ತಿ</li>
-<li page="">೧೨. ಗಾಂಧೀಜಿಯ ಅಂತರ್ವಾಣಿ </li>
-<li page="">೧೩. ಅಪಾರ ಆತ್ಮಬಲದ ಜಗದೀಶನ್ </li>
-<li page="">೧೪. ಜನಪ್ರಿಯ ಸ್ತ್ರೀರೋಗತಜ್ಞ ಡಾ. ಶ್ರೀನಿವಾಸ ಕೌಲಗೌಡ </li>
-<li page="">೧೫. ಸಂಗೀತ ಪಂಡಿತ ಭೀಮಸೇನ ಜೋಶಿ </li>
-<li page="">೧೬. ಬ್ರಹ್ಮರ್ಷಿ ದೈವರಾತರು </li>
-<li page="">೧೭. ಕಲಾಗುರು ಜಿ.ಎಸ್. ದಂಡಾವತಿಮಠ </li>
-<li page="">೧೮. ಶಂಕರನ್ ನಂಬೂದ್ರಿಪಾದ ಯಾರು ? </li>
-<li page="">೧೬. ಆ ನಹರು ಕೋಪ !</li>
-<li page="">೨೦ ಕಮಲಾ ನೆಹರು </li>
-<li page="">೨೧. ಬಿಳಿಯ ಕನ್ನಡಿಗ: ಎ.ಸಿ. ಫ್ಯಾರನ್ </li>
-<li page="">೨೨. ನ್ಯಾಯಮೂರ್ತಿ ಮಹಾಜನ </li>
-<li page="">೨೩. ಮಹರ್ಷಿ ಮಹೇಶಯೋಗಿಗಳ ಕ್ರಾಂತಧ್ಯಾನ </li>
-<li page="">೨೪. ನಮ್ಮ ಹೊಸ ಮುಖ್ಯ ಸೇನಾಪತಿ </li>
-<li page="">೨೫. ಮುರಾರಜಿ ದೇಸಾಯಿ ಪಾ.ವೆಂ.ರವರ ಮೊರಾರ್ಜಿ ಮೇಲಿನ ಲೇಖನಕ್ಕೆ ಬಂದ ಪ್ರತಿಕ್ರಿಯೆಗೆ ಪ್ರತ್ಯುತ್ತರ </li>
-<li page="">೨೬. ಸಿ.ಪಿ. ರಾಮಸ್ವಾಮಿ ಅಯ್ಯರ್ </li>
-<li page="">೨೭. ಲಾಲ ಬಹಾದುರ ಶಾಸ್ತ್ರಿ </li>
-<li page="">೨೮. ರಾಮಮನೋಹರ ಲೋಹಿಯಾ </li>
-<li page="">೨೯. ಶ್ರೀಮತಿ ವಿಜಯಲಕ್ಷ್ಮಿ ಪಂಡಿತ </li>
-<li page="">೩೦. ಡಾ. ಮೇರಿ ವರ್ಗಿಸ್ </li>
-<li page="">೩೧. ಹರಿಜನ ಕೈವಾರಿ ಸರದಾರ ವೀರನಗೌಡರ </li>
-<li page="">೩೨. ಹುತಾತ್ಮ ಮೀರ್ ಮಕಬಲ್ ಶೆರ್ವಾನಿ </li>
-<li page="">೩೩. ವೀಣೆ ಶೇಷಣ್ಣ </li>
-<li page="">೩೪. ಭಾರತದ ಕೋಗಿಲೆ: ಸರೋಜಿನಿದೇವಿ </li>
-<li page="">೩೫. ಪಂಡಿತ ಸಾವಳೇಕರ </li>
-<li page="">೩೬. ಆರ್.ಎಸ್.ಎಸ್. ಸಂಸ್ಥಾಪಕ ಹೆಡಗೇವಾರ್ </li>
-<li page="">೩೭. ಗೋಪಾಲ ಗಣೇಶ ಆಗರಕರ್ </li>
-<li page="">೩೮. ರಮಾನಂದ ಚಟರ್ಜಿ </li>
-<li page="">೩೯. ಗಾಂಧೀಜಿಯ ಅಗ್ನಿಪರೀಕ್ಷೆ </li>
-<li page="">೪೦. CHAACHA NEHRU </li>
-<li page="">೪೧. ಚೀನಾ ಯಾತ್ರಿಕ ಕಶ್ಯಪ ಮಾತಂಗ </li>
-<li page="">೪೨. ಯವನಿಯನ್ನು ವರಿಸಿದ ಬ್ರಾಹ್ಮಣ ಕವಿ</li>
+<li page="">ಅಂಬೇಡಕರರು ಹಾಗೇಕಾದರು ? </li>
+<li page="">ಪಶ್ಚಿಮಕ್ಕೆ ಯೋಗಮಾರ್ಗ ತೋರಿಸಿದ ಸುಂದರರಾಜ ಅಯ್ಯಂಗಾರ್ </li>
+<li page="">ಆದರ್ಶ ರೈತ ಚೆನ್ನಮಲ್ಲಪ್ಪ ಅಸುಂಡಿಯವರು </li>
+<li page="">ಆನಂದಿಬಾಯಿ ಜೋಶಿ </li>
+<li page="">ಶಿಕ್ಷಣತಜ್ಞ ಒಡೆಯರರೊಂದಿಗೆ ಒಂದೆರಡು ಗಂಟೆ </li>
+<li page="">ಟೈಪ್‌ರೈಟರ್ ನಿರ್ಮಿಸಿದ ಕಟ್ಟಿಯವರು </li>
+<li page="">ರಂಟೆಯಿಂದ ಮೋಟಾರ್: ಕಿರ್ಲೋಸ್ಕರ ನಡೆದು ಬಂದ ದಾರಿ </li>
+<li page="">ಡಾ. ಆನಂದ ಕುಮಾರಸ್ವಾಮಿ </li>
+<li page="">ನಾಟ್ಯಾಚಾರ ಶ್ರೀನಿವಾಸ ಕುಲಕರ್ಣಿ </li>
+<li page="">ಸುಚೇತಾ ಕೃಪಲಾನಿ </li>
+<li page="">ಜಗದ್ಗುರುವಾಗಲೊಲ್ಲದ ಜೆ. ಕೃಷ್ಣಮೂರ್ತಿ</li>
+<li page="">ಗಾಂಧೀಜಿಯ ಅಂತರ್ವಾಣಿ </li>
+<li page="">ಅಪಾರ ಆತ್ಮಬಲದ ಜಗದೀಶನ್ </li>
+<li page="">ಜನಪ್ರಿಯ ಸ್ತ್ರೀರೋಗತಜ್ಞ ಡಾ. ಶ್ರೀನಿವಾಸ ಕೌಲಗೌಡ </li>
+<li page="">ಸಂಗೀತ ಪಂಡಿತ ಭೀಮಸೇನ ಜೋಶಿ </li>
+<li page="">ಬ್ರಹ್ಮರ್ಷಿ ದೈವರಾತರು </li>
+<li page="">ಕಲಾಗುರು ಜಿ.ಎಸ್. ದಂಡಾವತಿಮಠ </li>
+<li page="">ಶಂಕರನ್ ನಂಬೂದ್ರಿಪಾದ ಯಾರು ? </li>
+<li page="">ಆ ನಹರು ಕೋಪ !</li>
+<li page="">ಕಮಲಾ ನೆಹರು </li>
+<li page="">ಬಿಳಿಯ ಕನ್ನಡಿಗ: ಎ.ಸಿ. ಫ್ಯಾರನ್ </li>
+<li page="">ನ್ಯಾಯಮೂರ್ತಿ ಮಹಾಜನ </li>
+<li page="">ಮಹರ್ಷಿ ಮಹೇಶಯೋಗಿಗಳ ಕ್ರಾಂತಧ್ಯಾನ </li>
+<li page="">ನಮ್ಮ ಹೊಸ ಮುಖ್ಯ ಸೇನಾಪತಿ </li>
+<li page="">ಮುರಾರಜಿ ದೇಸಾಯಿ ಪಾ.ವೆಂ.ರವರ ಮೊರಾರ್ಜಿ ಮೇಲಿನ ಲೇಖನಕ್ಕೆ ಬಂದ ಪ್ರತಿಕ್ರಿಯೆಗೆ ಪ್ರತ್ಯುತ್ತರ </li>
+<li page="">ಸಿ.ಪಿ. ರಾಮಸ್ವಾಮಿ ಅಯ್ಯರ್ </li>
+<li page="">ಲಾಲ ಬಹಾದುರ ಶಾಸ್ತ್ರಿ </li>
+<li page="">ರಾಮಮನೋಹರ ಲೋಹಿಯಾ </li>
+<li page="">ಶ್ರೀಮತಿ ವಿಜಯಲಕ್ಷ್ಮಿ ಪಂಡಿತ </li>
+<li page="">ಡಾ. ಮೇರಿ ವರ್ಗಿಸ್ </li>
+<li page="">ಹರಿಜನ ಕೈವಾರಿ ಸರದಾರ ವೀರನಗೌಡರ </li>
+<li page="">ಹುತಾತ್ಮ ಮೀರ್ ಮಕಬಲ್ ಶೆರ್ವಾನಿ </li>
+<li page="">ವೀಣೆ ಶೇಷಣ್ಣ </li>
+<li page="">ಭಾರತದ ಕೋಗಿಲೆ: ಸರೋಜಿನಿದೇವಿ </li>
+<li page="">ಪಂಡಿತ ಸಾವಳೇಕರ </li>
+<li page="">ಆರ್.ಎಸ್.ಎಸ್. ಸಂಸ್ಥಾಪಕ ಹೆಡಗೇವಾರ್ </li>
+<li page="">ಗೋಪಾಲ ಗಣೇಶ ಆಗರಕರ್ </li>
+<li page="">ರಮಾನಂದ ಚಟರ್ಜಿ </li>
+<li page="">ಗಾಂಧೀಜಿಯ ಅಗ್ನಿಪರೀಕ್ಷೆ </li>
+<li page="">CHAACHA NEHRU </li>
+<li page="">ಚೀನಾ ಯಾತ್ರಿಕ ಕಶ್ಯಪ ಮಾತಂಗ </li>
+<li page="">ಯವನಿಯನ್ನು ವರಿಸಿದ ಬ್ರಾಹ್ಮಣ ಕವಿ</li>
 </ol>
 </div>
