--- a/application/views/flat/3-Books/008.xhtml
+++ b/application/views/flat/3-Books/008.xhtml
@@ -6,33 +6,33 @@
 <li page="">ನಮ್ಮ ತಂದೆ ಪಾವೆಂ : ರಾಧಾಕೃಷ್ಣ ಆಚಾರ್</li>
 <li page="">(ಪರಿಚಯ) :  ಶಿವಾನಂದ ಜೋಶಿ</li>
 <li page="">ಧನ್ಯೋಸ್ಮಿ  :  ಶಿವಾನಂದ ಜೋಶಿ</li>
-<li page="">೧. ಸ್ವಾತಂತ್ರ್ಯ : ಅನಿವಾರ್ಯದ ಔದಾರ್ಯ </li>
-<li page="">೨. ವ್ಯಕ್ತಿ. ಪ್ರಜಾಪ್ರಭುತ್ವ. ನೈತಿಕತೆ ಇತ್ಯಾದಿ </li>
-<li page="">೩. ಗಲಭೆಗಳು, ಅಧಿಕಾರದಾಹ, ಪ್ರಜಾತಂತ್ರ ಇತ್ಯಾದಿ </li>
-<li page="">೪. ಪ್ರಜಾಪ್ರಭುತ್ವ ಹಾಗೂ ಹೈಕಮಾಂಡ್ ಸಂಸ್ಕೃತಿ </li>
-<li page="">೫. ಚುನಾವಣೆಗಳ ಹೊಸಯುಗ </li>
-<li page="">೭. ಚುನಾವಣೆ ಹಾಗೂ ಬದಲಾವಣೆ </li>
-<li page="">೮. ಚುನಾವಣೆ ಮತದಾರ ಇತ್ಯಾದಿ </li>
-<li page="">೯. ಅಧ್ಯಕ್ಷ ಪದ್ಧತಿ : ಕೆಲ ಚಿಂತನೆಗಳು </li>
-<li page="">೧೦. ಅಧ್ಯಕ್ಷೀಯ ಪದ್ಧತಿ ಸೂಕ್ತವಹುದೆ? </li>
-<li page="">೧೧. ಚಳುವಳಿಗಳು ಮತ್ತು ದಬ್ಬಾಳಿಕೆ </li>
-<li page="">೧೨. ಸುಗ್ರೀವಾಜ್ಞೆಗಳು </li>
-<li page="">೧೩. ಶಾಸನಾಂಗದ ಅಧಿಕಾರ ವ್ಯಾಪ್ತಿ. </li>
-<li page="">೧೪. ಕೇಂದ್ರ -ರಾಜ್ಯ ಅಧಿಕಾರ ಪರಿಸಮನ </li>
-<li page="">೧೫. ನ್ಯಾಯಾಂಗ - ಕಾರ್ಯಾಂಗ ತಿಕ್ಕಾಟ</li>
-<li page="">೧೬. ಮೈಸೂರು - ಮಹಾರಾಷ್ಟ್ರ ಗಡಿತಂಟೆ - ೧ </li>
-<li page="">೧೭. ಗಡಿತಂಟೆ - ವಿವೇಕ ಮತ್ತು ಅವಿವೇಕ - ೨ </li>
-<li page="">೧೮. ಗಡಿತಂಟೆ -ಮಹಾಜನ ವರದಿಯ ದುರದೃಷ್ಟ - ೩ </li>
-<li page="">೧೯. ಮತ್ತೊಮ್ಮೆ ಗಡಿತಂಟೆ - ೪ </li>
-<li page="">೨೦. ಆಂಧ್ರದಲ್ಲಿ ನಡೆದಿರುವುದೇನು? </li>
-<li page="">೨೧. ಭಾರತದ ನೆರೆ - ಹೊರೆ </li>
-<li page="">೨೨. ಕಾಶ್ಮೀರದಲ್ಲಿ ನಾವೇಕೆ ಹೋರಾಡುತ್ತಿದ್ದೇವೆ</li>
-<li page="">೨೪. ಜಾತೀಯತೆಯ ಪ್ರಶ್ನೆ : ಅರ್ಥ ಮತ್ತು ಅನರ್ಥ</li>
-<li page="">೨೫. ರಾಜಕಾರಣವೊಂದು ವೃತ್ತಿಯಾಗಬೇಕು </li>
-<li page="">೨೬. ಭ್ರಷ್ಟಾಚಾರ ಸ್ವಾಭಾವಿಕ ದೌರ್ಬಲ್ಯವೇ? </li>
-<li page="">೨೭. ಭ್ರಷ್ಟಾಚಾರಕ್ಕೂ ಬೇಕೆ ಆಚಾರ ಸಂಹಿತೆ </li>
-<li page="">೨೮. ಕಲ್ಯಾಣ ರಾಜ್ಯ ಕಲ್ಯಾಣ ತಂದೀತೇ? </li>
-<li page="">೨೯. ಈ ದೇಶ ಅಷ್ಟು ಕೆಟ್ಟು ಹೋಗಿದೆಯೇ?</li>
+<li page="">ಸ್ವಾತಂತ್ರ್ಯ : ಅನಿವಾರ್ಯದ ಔದಾರ್ಯ </li>
+<li page="">ವ್ಯಕ್ತಿ. ಪ್ರಜಾಪ್ರಭುತ್ವ. ನೈತಿಕತೆ ಇತ್ಯಾದಿ </li>
+<li page="">ಗಲಭೆಗಳು, ಅಧಿಕಾರದಾಹ, ಪ್ರಜಾತಂತ್ರ ಇತ್ಯಾದಿ </li>
+<li page="">ಪ್ರಜಾಪ್ರಭುತ್ವ ಹಾಗೂ ಹೈಕಮಾಂಡ್ ಸಂಸ್ಕೃತಿ </li>
+<li page="">ಚುನಾವಣೆಗಳ ಹೊಸಯುಗ </li>
+<li page="">ಚುನಾವಣೆ ಹಾಗೂ ಬದಲಾವಣೆ </li>
+<li page="">ಚುನಾವಣೆ ಮತದಾರ ಇತ್ಯಾದಿ </li>
+<li page="">ಅಧ್ಯಕ್ಷ ಪದ್ಧತಿ : ಕೆಲ ಚಿಂತನೆಗಳು </li>
+<li page="">ಅಧ್ಯಕ್ಷೀಯ ಪದ್ಧತಿ ಸೂಕ್ತವಹುದೆ? </li>
+<li page="">ಚಳುವಳಿಗಳು ಮತ್ತು ದಬ್ಬಾಳಿಕೆ </li>
+<li page="">ಸುಗ್ರೀವಾಜ್ಞೆಗಳು </li>
+<li page="">ಶಾಸನಾಂಗದ ಅಧಿಕಾರ ವ್ಯಾಪ್ತಿ. </li>
+<li page="">ಕೇಂದ್ರ -ರಾಜ್ಯ ಅಧಿಕಾರ ಪರಿಸಮನ </li>
+<li page="">ನ್ಯಾಯಾಂಗ - ಕಾರ್ಯಾಂಗ ತಿಕ್ಕಾಟ</li>
+<li page="">ಮೈಸೂರು - ಮಹಾರಾಷ್ಟ್ರ ಗಡಿತಂಟೆ - ೧ </li>
+<li page="">ಗಡಿತಂಟೆ - ವಿವೇಕ ಮತ್ತು ಅವಿವೇಕ - ೨ </li>
+<li page="">ಗಡಿತಂಟೆ -ಮಹಾಜನ ವರದಿಯ ದುರದೃಷ್ಟ - ೩ </li>
+<li page="">ಮತ್ತೊಮ್ಮೆ ಗಡಿತಂಟೆ - ೪ </li>
+<li page="">ಆಂಧ್ರದಲ್ಲಿ ನಡೆದಿರುವುದೇನು? </li>
+<li page="">ಭಾರತದ ನೆರೆ - ಹೊರೆ </li>
+<li page="">ಕಾಶ್ಮೀರದಲ್ಲಿ ನಾವೇಕೆ ಹೋರಾಡುತ್ತಿದ್ದೇವೆ</li>
+<li page="">ಜಾತೀಯತೆಯ ಪ್ರಶ್ನೆ : ಅರ್ಥ ಮತ್ತು ಅನರ್ಥ</li>
+<li page="">ರಾಜಕಾರಣವೊಂದು ವೃತ್ತಿಯಾಗಬೇಕು </li>
+<li page="">ಭ್ರಷ್ಟಾಚಾರ ಸ್ವಾಭಾವಿಕ ದೌರ್ಬಲ್ಯವೇ? </li>
+<li page="">ಭ್ರಷ್ಟಾಚಾರಕ್ಕೂ ಬೇಕೆ ಆಚಾರ ಸಂಹಿತೆ </li>
+<li page="">ಕಲ್ಯಾಣ ರಾಜ್ಯ ಕಲ್ಯಾಣ ತಂದೀತೇ? </li>
+<li page="">ಈ ದೇಶ ಅಷ್ಟು ಕೆಟ್ಟು ಹೋಗಿದೆಯೇ?</li>
 <li page="">ತೇಲಿದ್ದೆಷ್ಟು ಈಸಿದ್ದೆಷ್ಟು? (ಪಾವೆಂ ಆತ್ಮಾವಲೋಕನ)</li>
 </ol>
 </div>
