--- a/application/views/flat/3-Books/013.xhtml
+++ b/application/views/flat/3-Books/013.xhtml
@@ -1,48 +1,47 @@
 ﻿<div data-bcode="013">
 	<h1 class="title" data-language="kannada">ಹೊಸಗನ್ನಡದ ಹಿರಿಯರು</h1>
 	<ol>
-<li page="">ಪರಿವಿಡಿ</li>
 <li page="">ಹೊಸಗನ್ನಡದ ಹಿರಿಯರು ಮತ್ತು ಕೃತಿ-ಚಿಂತನೆ </li>
-<li page="">೧. ಗೋವಿಂದ ಪೈಗಳೊಂದಿಗೆ </li>
-<li page="">೨. ಬೇಂದ್ರೆ ಅಂದ್ರೆ </li>
-<li page="">೩. ಪೊಳಲಿ ಶೀನಪ್ಪ ಹೆಗ್ಗಡೆ </li>
-<li page="">೪. ಶಿವರಾಮ ಕಾರಂತ 'ಪ್ರಪಂಚ' </li>
-<li page="">೫. ಕಾದಂಬರಿ ಯುಗಪ್ರವರ್ತಕ, ಅ.ನ.ಕೃ. </li>
-<li page="">೬. ಸಾರಸ್ವತಲೋಕದ ಸಲಗ - ಶಂ. ಬಾ. </li>
-<li page="">೭. ಸಮನ್ವಯದ ಉಪಾಸಕ ಗೋಕಾಕರು </li>
-<li page="">೮. ಅಡಿಗರ ಮಾನವ ಕಾಳಜಿ</li>
-<li page="">೯. ಬಿ. ಎಚ್. ಶ್ರೀಧರರು</li>
-<li page="">೧೦. ನಾ ಕಂಡ ಮೊಹರೆಯವರು</li>
-<li page="">೧೧. ಗುರುವರ್ಯ ಹ. ರಾ. ಪುರೋಹಿತರು </li>
-<li page="">೧೨. ಬುರ್ಲಿ ಬಿಂದುಮಾಧವರು </li>
-<li page="">೧೩. ಕನಸುಗಾರ ಜಿ ಬಿ ಜೋಶಿ  </li>
-<li page="">೧೪. ಮಿತ್ರ ದ ಬಾ ಕುಲಕರ್ಣಿ  </li>
-<li page="">೧೫. ಕ. ದಾಸಭಟ್ಟರು </li>
-<li page="">೧೬. ಹುಕ್ಕೇರಿ ಬಾಳಪ್ಪನವರು </li>
-<li page="">೧೭. ಹೆಮಂತಗಾನದ ಬಲ್ಲಾಳರು </li>
-<li page="">೧೮. ಕನ್ನಡ ಪತ್ರಿಕೋದ್ಯೋಗ </li>
-<li page="">೧೯, ಪತ್ರಿಕೋದ್ಯಮಿ 'ಪಾ.ವೆಂ.' ವಿಚಾರಧಾರೆ</li>
+<li page="">ಗೋವಿಂದ ಪೈಗಳೊಂದಿಗೆ </li>
+<li page="">ಬೇಂದ್ರೆ ಅಂದ್ರೆ </li>
+<li page="">ಪೊಳಲಿ ಶೀನಪ್ಪ ಹೆಗ್ಗಡೆ </li>
+<li page="">ಶಿವರಾಮ ಕಾರಂತ 'ಪ್ರಪಂಚ' </li>
+<li page="">ಕಾದಂಬರಿ ಯುಗಪ್ರವರ್ತಕ, ಅ.ನ.ಕೃ. </li>
+<li page="">ಸಾರಸ್ವತಲೋಕದ ಸಲಗ - ಶಂ. ಬಾ. </li>
+<li page="">ಸಮನ್ವಯದ ಉಪಾಸಕ ಗೋಕಾಕರು </li>
+<li page="">ಅಡಿಗರ ಮಾನವ ಕಾಳಜಿ</li>
+<li page="">ಬಿ. ಎಚ್. ಶ್ರೀಧರರು</li>
+<li page="">ನಾ ಕಂಡ ಮೊಹರೆಯವರು</li>
+<li page="">ಗುರುವರ್ಯ ಹ. ರಾ. ಪುರೋಹಿತರು </li>
+<li page="">ಬುರ್ಲಿ ಬಿಂದುಮಾಧವರು </li>
+<li page="">ಕನಸುಗಾರ ಜಿ ಬಿ ಜೋಶಿ  </li>
+<li page="">ಮಿತ್ರ ದ ಬಾ ಕುಲಕರ್ಣಿ  </li>
+<li page="">ಕ. ದಾಸಭಟ್ಟರು </li>
+<li page="">ಹುಕ್ಕೇರಿ ಬಾಳಪ್ಪನವರು </li>
+<li page="">ಹೆಮಂತಗಾನದ ಬಲ್ಲಾಳರು </li>
+<li page="">ಕನ್ನಡ ಪತ್ರಿಕೋದ್ಯೋಗ </li>
+<li page="">ಪತ್ರಿಕೋದ್ಯಮಿ 'ಪಾ.ವೆಂ.' ವಿಚಾರಧಾರೆ</li>
 <li page="">ಒಂದಿಷ್ಟು ಪ್ರಾಚೀನ ಪ್ರಮೇಯಗಳು </li>
 <li page="">ಹಳಗನ್ನಡ ಸಾಹಿತ್ಯ</li>
-<li page="">1. ಗಂಗಾಧರಂ ಶಾಸನ </li>
-<li page="">2. ಕವಿಸಮಯ ವಿಲಾಸಂ </li>
-<li page="">3. ನೇಮಿಚಂದ್ರನ ಒಂದು ಪದ್ಯ </li>
-<li page="">4. ಒಂದು ಅಪೂರ್ವ ಷಟ್ಟದಿ </li>
-<li page="">5. ಕುಮಾರವ್ಯಾಸ - ಕೆಲ ಬಿಡಿ ಆಲೋಚನೆಗಳು </li>
-<li page="">6. ಲಕ್ಷ್ಮೀಶನ ಸ್ಥಳ ಸಮಸ್ಯೆ</li>
+<li page="">ಗಂಗಾಧರಂ ಶಾಸನ </li>
+<li page="">ಕವಿಸಮಯ ವಿಲಾಸಂ </li>
+<li page="">ನೇಮಿಚಂದ್ರನ ಒಂದು ಪದ್ಯ </li>
+<li page="">ಒಂದು ಅಪೂರ್ವ ಷಟ್ಟದಿ </li>
+<li page="">ಕುಮಾರವ್ಯಾಸ - ಕೆಲ ಬಿಡಿ ಆಲೋಚನೆಗಳು </li>
+<li page="">ಲಕ್ಷ್ಮೀಶನ ಸ್ಥಳ ಸಮಸ್ಯೆ</li>
 <li page="">ಸಂಸ್ಕೃತ ಸಾಹಿತ್ಯ </li>
-<li page="">7. ಸಂಸ್ಕೃತ ಮುಕ್ತಕ </li>
-<li page="">8. ಅಮರುಕನ ಶೃಂಗಾರ ಸೌರಭ </li>
-<li page="">9. ಸಂಸ್ಕೃತದಲ್ಲಿ ಪ್ರಣಯ ವ್ಯಾಪಾರ </li>
-<li page="">10. ವೆಂಕಟಾಧ್ವರಿ ಕಂಡ ದಕ್ಷಿಣ ಭಾರತ </li>
-<li page="">11. ಈ ನ್ಯಾಯಗಳೇ ಬೇರೆ</li>
+<li page="">ಸಂಸ್ಕೃತ ಮುಕ್ತಕ </li>
+<li page="">ಅಮರುಕನ ಶೃಂಗಾರ ಸೌರಭ </li>
+<li page="">ಸಂಸ್ಕೃತದಲ್ಲಿ ಪ್ರಣಯ ವ್ಯಾಪಾರ </li>
+<li page="">ವೆಂಕಟಾಧ್ವರಿ ಕಂಡ ದಕ್ಷಿಣ ಭಾರತ </li>
+<li page="">ಈ ನ್ಯಾಯಗಳೇ ಬೇರೆ</li>
 <li page="">ಭಾಷಾ ವಿಚಾರ</li>
-<li page="">12. ಭಾಷೆಗಳ ವಿಲಕ್ಷಣ ಗತಿ </li>
-<li page="">13. ಭಾಷೆ ಮತ್ತು ಅವಯವಗಳು </li>
-<li page="">14. 'ಕ್ಷ' ಮತ್ತು 'ಜ್ಞ'</li>
+<li page="">ಭಾಷೆಗಳ ವಿಲಕ್ಷಣ ಗತಿ </li>
+<li page="">ಭಾಷೆ ಮತ್ತು ಅವಯವಗಳು </li>
+<li page="">'ಕ್ಷ' ಮತ್ತು 'ಜ್ಞ'</li>
 <li page="">'ಭಗ'-ವತ್ </li>
-<li page="">16. ಸ್ಮಿತ ಪೂರ್ವಾಭಿಭಾಷಿ ಚ </li>
-<li page="">17. 'ರಾಮ' ಶಬ್ಬದ ಬಗ್ಗೆ ವಿಚಾರಲಹರಿ </li>
-<li page="">18. ಸಂಸ್ಕೃತಿ, ಸಂಸ್ಕಾರ, ಸಂಸ್ಕೃತ</li>
+<li page="">ಸ್ಮಿತ ಪೂರ್ವಾಭಿಭಾಷಿ ಚ </li>
+<li page="">'ರಾಮ' ಶಬ್ಬದ ಬಗ್ಗೆ ವಿಚಾರಲಹರಿ </li>
+<li page="">ಸಂಸ್ಕೃತಿ, ಸಂಸ್ಕಾರ, ಸಂಸ್ಕೃತ</li>
 </ol>
 </div>
