--- a/application/views/flat/3-Books/016.xhtml
+++ b/application/views/flat/3-Books/016.xhtml
@@ -2,22 +2,22 @@
 	<h1 class="title" data-language="kannada">ಪಾ. ವೆಂ. ಆಚಾರ್ಯ ಆಯ್ದ ನಗೆಬರಹಗಳು</h1>
 	<ol>
 <li>ಒಳಪುಟಗಳಲ್ಲಿ...</li>
-<li page="">೧. ಬೀದಿಯ ಕಾಮಣ್ಣರು</li>
-<li page="">೨.ಅಮ್ಮಾವ್ರ ಗಂಡಾಯಣ </li>
-<li page="">೩. ಇಮ್ಮಡಿ ತೊಗಲಖ</li>
-<li page="">೪.ಯಾರಿಗಾಗಿ ಬದುಕುತ್ತೇವೆ?</li>
-<li page="">೫.ಸವಿಗನಸುಗಳು </li>
-<li page="">೬. ಸಾಯಲಿಕ್ಕೆ ಪುರುಸೊತ್ತಾಗಲಿಲ್ಲ</li>
-<li page="">೭.ಮಂಗಾಯಣಂ </li>
-<li page="">೮. ಕಪ್ಪು ಕಪ್ಪಂದೇಕೆ ಬೀಳುಗಳೆವಿರಿ? </li>
-<li page="">೯. ಯದ್ವಾತದ್ವಾ ಯೆಂಕಣ್ಣಯ್ಯನವರು </li>
-<li page="">೧೦. ಹೆಂಗಸರನ್ನು ಹೇಗೆ ಅರ್ಥಮಾಡಿಕೊಳ್ಳಬೇಕು ? </li>
-<li page="">೧೧. ಶ್ರೀ ಗಣೇಶಾಯ ನಮಃ </li>
-<li page="">೧೨. ಸೀರೆ ಮತ್ತು ಮಹಾಭಾರತ </li>
-<li page="">೧೩. ಹಾಸ್ಯ ಮೀಮಾಂಸೆ</li>
-<li page="">೧೪. ಭಾವೀ ಜಗತ್ತಿನಲ್ಲಿ ಮಹಿಳೆಯರ ಸ್ಥಾನ</li>
-<li page="">೧೫. ವಾನರಾಯಣ </li>
-<li page="">೧೬. ಮಶಕ ಪುರಾಣ </li>
-<li page="">೧೭. ಮದುವೆಯಾದರೂ ಸುಖಪಡುವುದು ಹೇಗೆ?</li>
+<li page="">ಬೀದಿಯ ಕಾಮಣ್ಣರು</li>
+<li page="">ಅಮ್ಮಾವ್ರ ಗಂಡಾಯಣ </li>
+<li page="">ಇಮ್ಮಡಿ ತೊಗಲಖ</li>
+<li page="">ಯಾರಿಗಾಗಿ ಬದುಕುತ್ತೇವೆ?</li>
+<li page="">ಸವಿಗನಸುಗಳು </li>
+<li page="">ಸಾಯಲಿಕ್ಕೆ ಪುರುಸೊತ್ತಾಗಲಿಲ್ಲ</li>
+<li page="">ಮಂಗಾಯಣಂ </li>
+<li page="">ಕಪ್ಪು ಕಪ್ಪಂದೇಕೆ ಬೀಳುಗಳೆವಿರಿ? </li>
+<li page="">ಯದ್ವಾತದ್ವಾ ಯೆಂಕಣ್ಣಯ್ಯನವರು </li>
+<li page="">ಹೆಂಗಸರನ್ನು ಹೇಗೆ ಅರ್ಥಮಾಡಿಕೊಳ್ಳಬೇಕು ? </li>
+<li page="">ಶ್ರೀ ಗಣೇಶಾಯ ನಮಃ </li>
+<li page="">ಸೀರೆ ಮತ್ತು ಮಹಾಭಾರತ </li>
+<li page="">ಹಾಸ್ಯ ಮೀಮಾಂಸೆ</li>
+<li page="">ಭಾವೀ ಜಗತ್ತಿನಲ್ಲಿ ಮಹಿಳೆಯರ ಸ್ಥಾನ</li>
+<li page="">ವಾನರಾಯಣ </li>
+<li page="">ಮಶಕ ಪುರಾಣ </li>
+<li page="">ಮದುವೆಯಾದರೂ ಸುಖಪಡುವುದು ಹೇಗೆ?</li>
 </ol>
 </div>
