--- a/application/views/flat/3-Books/019.xhtml
+++ b/application/views/flat/3-Books/019.xhtml
@@ -2,31 +2,31 @@
 	<h1 class="title" data-language="kannada">ಓದುಗರೊಡನೆಯ ಹರಟೆಗಳು</h1>
 	<ol>
 <li>ಪರಿವಿಡಿ </li>
-<li page="">೧) ಕನ್ನಡ ಕನ್ನಡ ಇದೆಲ್ಲಾವುಂ ಎನ್ನಡ? </li>
-<li page="">೨) ಕವಿಶೌರ್ಯ ಪ್ರಕರಣಂ </li>
-<li page="">೩) ಕವಿತ್ವ ಲಕ್ಷಣಮ್ </li>
-<li page="">೪) ಕಾಡಿಗೆ ಮತ್ತು ಕಾವ್ಯ </li>
-<li page="">೫) ಕುವೆಂಪು ದರ್ಶನ </li>
-<li page="">೬) ಚಂಡಿಕಾ ಬಲಿ </li>
-<li page="">೭) ನಾಗ-ಪಂಚಮಿ </li>
-<li page="">೮) ನೃಪತುಂಗ ಎಂದರೇನು? </li>
-<li page="">೯) ಪಂಪ ಹಾಗೂ ಪಂಪ್ </li>
-<li page="">೧೦) ಪುಷ್ಪ ವಿಹಾರ </li>
-<li page="">೧೧) ಶಕುಂತಲೋಪಾಖ್ಯಾನ </li>
-<li page="">೧೨) ಶಬ್ದಚ್ಛಟ ಎಂಬ ರೋಗ </li>
-<li page="">೧೩) ಶಬ್ದಶಕ್ತಿ ಹೆಚ್ಚಿಸಿಕೊಳ್ಳಿ </li>
-<li page="">೧೪) ಶುಕಪುರಾಣಂ </li>
-<li page="">೧೫) ಶೇಕ್ ಸ್ಪಿಯರನನ್ನು ಯಾರು ಬರೆದರು? </li>
-<li page="">೧೬) ಶ್ರೀಮದ್ರಾಮಾಯಣ ದರ್ಶನಂ </li>
-<li page="">೧೭) ಸಂಶೋಧನೆಯ ಸಮಸ್ಯೆಗಳು </li>
-<li page="">೧೮) ಸಪ್ತಾಕ್ಷರಿ ಮಂತ್ರ </li>
-<li page="">೧೯) ಸಕ್ಕರೆ ಗೀತ </li>
-<li page="">೨೦) ಸಾಹಿತ್ಯದ ಒಂದು ಅದ್ಭುತ</li>
-<li page="">೨೧) 'ಇಸು' ಸಮೃದ್ಧಿ! </li>
-<li page="">೨೨) ಮಂತ್ರಿಗಳು ಮತ್ತು ಅವರ ವಾಕ್ ಸ್ವಾತಂತ್ರ್ಯ </li>
-<li page="">೨೩) ಲಾಂಗೂಲ ಪತ್ರಂಗಳ್ </li>
-<li page="">೨೪) ಜಬ್ಬಲಪುರದ ನರಭಕ್ಷಕ </li>
-<li page="">೨೫) ಲಾಂಗೂಲ ಪತ್ರಿಕೆಯಿಂದ</li>
+<li page="">ಕನ್ನಡ ಕನ್ನಡ ಇದೆಲ್ಲಾವುಂ ಎನ್ನಡ? </li>
+<li page="">ಕವಿಶೌರ್ಯ ಪ್ರಕರಣಂ </li>
+<li page="">ಕವಿತ್ವ ಲಕ್ಷಣಮ್ </li>
+<li page="">ಕಾಡಿಗೆ ಮತ್ತು ಕಾವ್ಯ </li>
+<li page="">ಕುವೆಂಪು ದರ್ಶನ </li>
+<li page="">ಚಂಡಿಕಾ ಬಲಿ </li>
+<li page="">ನಾಗ-ಪಂಚಮಿ </li>
+<li page="">ನೃಪತುಂಗ ಎಂದರೇನು? </li>
+<li page="">ಪಂಪ ಹಾಗೂ ಪಂಪ್ </li>
+<li page="">ಪುಷ್ಪ ವಿಹಾರ </li>
+<li page="">ಶಕುಂತಲೋಪಾಖ್ಯಾನ </li>
+<li page="">ಶಬ್ದಚ್ಛಟ ಎಂಬ ರೋಗ </li>
+<li page="">ಶಬ್ದಶಕ್ತಿ ಹೆಚ್ಚಿಸಿಕೊಳ್ಳಿ </li>
+<li page="">ಶುಕಪುರಾಣಂ </li>
+<li page="">ಶೇಕ್ ಸ್ಪಿಯರನನ್ನು ಯಾರು ಬರೆದರು? </li>
+<li page="">ಶ್ರೀಮದ್ರಾಮಾಯಣ ದರ್ಶನಂ </li>
+<li page="">ಸಂಶೋಧನೆಯ ಸಮಸ್ಯೆಗಳು </li>
+<li page="">ಸಪ್ತಾಕ್ಷರಿ ಮಂತ್ರ </li>
+<li page="">ಸಕ್ಕರೆ ಗೀತ </li>
+<li page="">ಸಾಹಿತ್ಯದ ಒಂದು ಅದ್ಭುತ</li>
+<li page="">'ಇಸು' ಸಮೃದ್ಧಿ! </li>
+<li page="">ಮಂತ್ರಿಗಳು ಮತ್ತು ಅವರ ವಾಕ್ ಸ್ವಾತಂತ್ರ್ಯ </li>
+<li page="">ಲಾಂಗೂಲ ಪತ್ರಂಗಳ್ </li>
+<li page="">ಜಬ್ಬಲಪುರದ ನರಭಕ್ಷಕ </li>
+<li page="">ಲಾಂಗೂಲ ಪತ್ರಿಕೆಯಿಂದ</li>
 </ol>
 </div>
 
