--- a/application/views/flat/3-Books/024.xhtml
+++ b/application/views/flat/3-Books/024.xhtml
@@ -1,18 +1,18 @@
 ﻿<div data-bcode="024">
-	<h1 class="title" data-language="kannada">ಹಿಂದೂ ಮುಸ್ಲಿಂ ಮತ್ತು ಇತರ ಕತೆಗಳು</h1>
-	<ol>
+<h1 class="title" data-language="kannada">ಹಿಂದೂ ಮುಸ್ಲಿಂ ಮತ್ತು ಇತರ ಕತೆಗಳು</h1>
+<ol>
 <li page="">ಪರಿವಿಡಿ</li>
-<li page="">೧. ಕರುಳಿನ ಮರುಳು ೧೯೩೫ </li>
-<li page="">೨. ಅಪರ ಜೀವನ ೧೯೩೮</li>
-<li page=""> ೩. ಪಿಶಾಚಿಯ ತವರು ಮನೆ ೧೯೪೦</li>
-<li page="">೪. ಕಣ್ -ಸನ್ನೆ </li>
-<li page=""> ೫. ನಿರುದ್ಯೋಗಿ </li>
-<li page=""> ೬. ಹಿಂದೂ-ಮುಸ್ಲಿಮ್ ೧೯೪೦ </li>
-<li page=""> ೭. ವಿನೋದದ ಪರಮಾವಧಿ ೧೯೩೮ </li>
-<li page=""> ೮. ಎರಡು ಮಹಾ ಕಥೆಗಳು ೧೯೭೦ </li>
-<li page=""> ೯. ಒಂದು ಅ-ನೀತಿ ಕಥೆ </li>
-<li page=""> ೧೦. ಕನಸು </li>
-<li page=""> ೧೧. ಒಬ್ಬ ಸ್ವಾಮಿಗಳ ಕಥೆ ೧೯೮೪</li>
-<li page=""> ೧೨. ವಾಕಿಂಗ್ ಸ್ಟಿಕ್ಕಿನ ಪ್ರಕರಣ ೧೯೯೦</li>
+<li page="">ಕರುಳಿನ ಮರುಳು ೧೯೩೫ </li>
+<li page="">ಅಪರ ಜೀವನ ೧೯೩೮</li>
+<li page="">ಪಿಶಾಚಿಯ ತವರು ಮನೆ ೧೯೪೦</li>
+<li page="">ಕಣ್ -ಸನ್ನೆ </li>
+<li page="">ನಿರುದ್ಯೋಗಿ </li>
+<li page="">ಹಿಂದೂ-ಮುಸ್ಲಿಮ್ ೧೯೪೦ </li>
+<li page="">ವಿನೋದದ ಪರಮಾವಧಿ ೧೯೩೮ </li>
+<li page="">ಎರಡು ಮಹಾ ಕಥೆಗಳು ೧೯೭೦ </li>
+<li page="">ಒಂದು ಅ-ನೀತಿ ಕಥೆ </li>
+<li page="">ಕನಸು </li>
+<li page="">ಒಬ್ಬ ಸ್ವಾಮಿಗಳ ಕಥೆ ೧೯೮೪</li>
+<li page="">ವಾಕಿಂಗ್ ಸ್ಟಿಕ್ಕಿನ ಪ್ರಕರಣ ೧೯೯೦</li>
 </ol>
 </div>
